# sdlc-intel

./: .gitignore  LICENSE
harness/: README.md  pyproject.toml
harness/skills/codebase/: index.md
harness/skills/jira/: index.md
harness/skills/system/: index.md
harness/src/harness/: __init__.py  agent.py  cli.py  dtypes.py  env_vars.py  memory.py  skill_file_store.py  tools.py  utils.py
