[project]
name = "harness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sarath Srinivas", email = "sarathsrinix@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "langchain-openrouter>=0.2.5",
    "langgraph>=1.2.7",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "mlflow>=3.14.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
